--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
